Update presentation and analysis

--- a/presentation.qmd
+++ b/presentation.qmd
@@ -10,6 +10,9 @@ format:
     slide-number: true
     incremental: true
     toc: false
+    width: 1280
+    height: 720
+    zoom: 0.85
 footer: "© 2025 Laura Zang • Data: World Bank WDI"
 execute:
   echo: false
