--- a/presentation.qmd
+++ b/presentation.qmd
@@ -112,13 +112,15 @@ This suggests that quality and efficiency of healthcare matter more than the pro
 df[['gdp_per_capita', 'life_expectancy', 'health_expenditure_gdp_share']].corr()
 ```
 
+::: columns
+::: column
 ## Pairwise Relationships
 
 GDP per capita is strongly and positively associated with life expectancy, while both indicators display only weak relationships with health expenditure as a share of GDP.  
 
 The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.
-
-
+:::
+::: column
 ```{python}
 #| label: fig-pairwise
 #| fig-cap: "Pairwise relationships among GDP per capita, life expectancy, and health expenditure (% of GDP)."
@@ -128,16 +130,20 @@ The distributions along the diagonal highlight that income is highly skewed, whe
 
 sns.pairplot(df[['gdp_per_capita', 'life_expectancy', 'health_expenditure_gdp_share']], diag_kind='kde')
 ```
+::: 
 
 
+::: columns
+::: column
 ## GDP vs. Life Expectancy
 
-This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries, suggesting diminishing returns from income on health outcomes.
+- This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries, suggesting diminishing returns from income on health outcomes.
 
-This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”. 
+- This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”. 
 
-In other words, improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and longevity improvements depend more on innovation, public health policy, and system efficiency than on GDP growth alone.
-
+- Improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and longevity improvements depend more on other factors.
+:::
+::: column
 
 ```{python}
 #| label: fig-gdp-life
@@ -164,8 +170,10 @@ plt.tight_layout()
 plt.show()
 
 ```
+:::
 
-
+::: columns
+::: column
 ## Health Expenditure vs. Life Expectancy (Clusters)
 
 Overall: The relationship between health spending and life expectancy varies across country clusters, reflecting differences in health system efficiency. 
@@ -177,6 +185,8 @@ Overall: The relationship between health spending and life expectancy varies acr
 
 - Cluster 2 (blue): Low-income or inefficient systems that spend more (10–20 % of GDP) yet achieve shorter lifespans (~50–70 yrs).
 
+:::
+::: column
 
 ```{python}
 #| label: fig-health-clusters
@@ -244,6 +254,9 @@ plt.tight_layout()
 plt.show()
 ```
 
+:::
+
+
 ## Key Statistics
 
 The U.S. Healthcare Paradox:
@@ -255,6 +268,7 @@ The U.S. Healthcare Paradox:
 - High spending, low efficiency: The U.S. spends 16.5% of GDP on healthcare—about double the high-income average—but life expectancy (77.4 years) lags nearly four years behind.
 
 - Outlier status: As shown in @fig-health-clusters, the U.S. stands out as an inefficient system, supporting Our World in Data (2024) findings that efficiency and equity, not spending volume, drive future health improvements.
+
 
 ```{python}
 #| label: tbl-usa-comparison
