--- a/presentation.qmd
+++ b/presentation.qmd
@@ -136,13 +136,19 @@ sns.pairplot(df[['gdp_per_capita', 'life_expectancy', 'health_expenditure_gdp_sh
 
 ## GDP vs. Life Expectancy
 
-- This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries, suggesting diminishing returns from income on health outcomes.
+:::: {.columns}
+
+::: {.column width="40%"}
+
+- This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries.
 
 - This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”. 
 
-- Improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and longevity improvements depend more on other factors.
+- Improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and improvements depend on other factors.
 
+:::
 
+::: {.column width="60%"}
 ```{python}
 #| label: fig-gdp-life
 #| fig-cap: "Relationship between GDP per capita and life expectancy. Source: World Bank WDI (2023)."
@@ -167,8 +173,14 @@ plt.show()
 
 ```
 
+:::
+:::
 
 ## Health Expenditure vs. Life Expectancy (Clusters)
+
+:::: {.columns}
+
+::: {.column width="40%"}
 
 Overall: The relationship between health spending and life expectancy varies across country clusters, reflecting differences in health system efficiency. 
 
@@ -179,6 +191,10 @@ Overall: The relationship between health spending and life expectancy varies acr
 
 - Cluster 2 (blue): Low-income or inefficient systems that spend more (10–20 % of GDP) yet achieve shorter lifespans (~50–70 yrs).
 
+
+:::
+
+::: {.column width="60%"}
 
 ```{python}
 #| label: fig-health-clusters
@@ -247,6 +263,8 @@ plt.tight_layout()
 plt.show()
 ```
 
+:::
+:::
 
 ## Key Statistics
 
@@ -317,7 +335,7 @@ comparison.style.hide(axis='index').format({
   - The United States exemplifies inefficiency — spending 16.5% of GDP on healthcare yet ranking below peers in life expectancy.
   - Confirms findings from McKinsey (2023) and Our World in Data (2024) that system efficiency, equity, and innovation are now the main drivers of health gains, not wealth alone. [@mckinsey_pixels_progress_ch3]
 
-***Economic growth enables better health, but only when paired with efficient, equitable, and innovative healthcare systems.***
+- *Economic growth enables better health, but only when paired with efficient, equitable, and innovative healthcare systems.*
 
 
 ## References
